feat(v1.1): implement phases 3-5 - barber CRUD, appointment status transitions, distributed rate limiting with Redis fallback